- Fixes for sidebar: do not overflow container. Added position sticky for desktop.

--- a/src/assets/scss/structure/_vertical.scss
+++ b/src/assets/scss/structure/_vertical.scss
@@ -66,15 +66,12 @@
 // }
 
 .navbar-menu {
-  // width: 207px !important;
   z-index: $vertical-menu-z-index;
-  // background: $vertical-menu-bg;
-  // background: #16161a;
-  // background: rgba($color: #2a2f34, $alpha: 1.0);
-  // border-right: 1px solid $vertical-menu-border-dark;
   bottom: 0;
   margin-top: 0;
-  position: fixed;
+  position: sticky;
+  width: 100%;
+  padding-right: 0 !important;
   top: 0;
   // box-shadow: $vertical-menu-box-shadow;
   // padding: 0 0 calc(#{$header-height} + 25px) 0;
@@ -240,11 +237,12 @@
 //     width: 115px !important;
 //   }
 // }
-// @media (min-width: 991.99px) {
-//   .navbar-menu {
-//     width: 207px !important;
-//   }
-// }
+@media (max-width: 767.98px) {
+  .navbar-menu {
+    width: 207px !important;
+    position: fixed !important;
+  }
+}
 
 .navbar-brand-box {
   padding: 0 1.3rem;
